sfdx-source/force-app/main/default/objects/Quote_Brief_Relationship__c/Quote_Brief_Relationship__c.object-meta.xml
<CustomObject>
    <description>LEM-2983: Junction object between Quote and Brief.</description>
    <label>Quote Brief Relationship</label>
    <nameField>
        <displayFormat>BQR-{000000}</displayFormat>
        <label>Brief Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Brief Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>