sfdx-source/force-app/main/default/objects/Quote_Brief_Relationship__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>LEM-5456: It is used to store the Account Id on the related Quote.</description>
    <formula>CASESAFEID(Quote__r.SBQQ__Account__c)</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>