sfdx-source/force-app/main/default/objects/Quote_Brief_Relationship__c/fields/Brief__c.field-meta.xml
<CustomField>
    <fullName>Brief__c</fullName>
    <description>LEM-2983: Captures the Brief related to the Quote Brief Relationship.</description>
    <label>Brief</label>
    <referenceTo>Brief__c</referenceTo>
    <relationshipLabel>Quote</relationshipLabel>
    <relationshipName>Quote_Brief_Relationships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>