sfdx-source/force-app/main/default/objects/Quote_Brief_Relationship__c/fields/Campaign_of_Brief__c.field-meta.xml
<CustomField>
    <fullName>Campaign_of_Brief__c</fullName>
    <description>LEM-2982: Captures the campaign of the Brief with which the current Quote Relationship is associated.</description>
    <label>Campaign of Brief</label>
    <length>255</length>
    <type>Text</type>
</CustomField>